force-app/main/default/objects/GiftAidSubmission__c/GiftAidSubmission__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>GiftAidSubmission</label>
</CustomObject>