force-app/main/default/objects/GiftAidSubmission__c/fields/Channel_Product__c.field-meta.xml
<CustomField>
    <fullName>Channel_Product__c</fullName>
    <label>Channel_Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>