force-app/main/default/objects/GiftAidSubmission__c/fields/Channel_URI__c.field-meta.xml
<CustomField>
    <fullName>Channel_URI__c</fullName>
    <label>Channel_URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>