force-app/main/default/objects/GiftAidSubmission__c/fields/Channel_Version__c.field-meta.xml
<CustomField>
    <fullName>Channel_Version__c</fullName>
    <label>Channel_Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>