force-app/main/default/objects/GiftAidSubmission__c/fields/charityId__c.field-meta.xml
<CustomField>
    <fullName>charityId__c</fullName>
    <label>charityId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>