force-app/main/default/objects/GiftAidSubmission__c/fields/pass__c.field-meta.xml
<CustomField>
    <fullName>pass__c</fullName>
    <label>pass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>