force-app/main/default/objects/GiftAidSubmission__c/fields/polling_endpoint__c.field-meta.xml
<CustomField>
    <fullName>polling_endpoint__c</fullName>
    <label>polling endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>