force-app/main/default/objects/GiftAidSubmission__c/fields/senderId__c.field-meta.xml
<CustomField>
    <fullName>senderId__c</fullName>
    <label>senderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>